// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin route component renders correctly if logged in and admin 1`] = `
<Route
  location={
    Object {
      "from": "over there",
    }
  }
  render={[Function]}
/>
`;

exports[`admin route component renders correctly if logged in and admin 2`] = `
<component
  authenticated={true}
  component={[Function]}
  isAdmin={true}
  location={
    Object {
      "from": "over there",
    }
  }
/>
`;

exports[`admin route component renders correctly if logged in but not admin 1`] = `
<Route
  location={
    Object {
      "from": "over there",
    }
  }
  render={[Function]}
/>
`;

exports[`admin route component renders correctly if logged in but not admin 2`] = `<NoMatch />`;

exports[`admin route component renders correctly if logged out 1`] = `
<Route
  location={
    Object {
      "from": "over there",
    }
  }
  render={[Function]}
/>
`;

exports[`admin route component renders correctly if logged out 2`] = `
<Redirect
  to={
    Object {
      "pathname": "/login",
      "state": Object {
        "from": Object {
          "from": "over there",
        },
      },
    }
  }
/>
`;
